new proj/src/objects/GE_ES_Role_PL_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>GE_ES_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_ES_PL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>P&amp;L</label>
        <referenceTo>GE_ES_PL__c</referenceTo>
        <relationshipLabel>P&amp;L Role Configurations</relationshipLabel>
        <relationshipName>Role_PL_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_Role__c</fullName>
        <label>ES Role</label>
        <referenceTo>GE_ES_Role__c</referenceTo>
        <relationshipLabel>Role P&amp;L Configurations</relationshipLabel>
        <relationshipName>Role_PL_Configurations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Role P&amp;L Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Role P&amp;L Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Role P&amp;L Configurations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>